# pytse-client-me

./: .gitignore  README.md  pyproject.toml
pytse_client/: __init__.py  download.py
pytse_client/data/: symbols_name.json  symbols_option.json
tests/test_option/: test_ticker.py
