[tool.poetry]
name = "pytse-client-me"
version = "1.0.0"
description = "Customized Python client for Tehran Stock Exchange (TSE) with option function"
authors = ["The-BlackX"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "pytse_client"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12.7"
pandas = "^2.2.0"
requests = "^2.32.0"
jdatetime = "^5.0.0"
beautifulsoup4 = "^4.12.0"
tenacity = "^8.0.0"
aiohttp = "^3.9.0"
frozenlist = "^1.4.0"
lxml = "^5.0.0"
black = "^24.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pynvim = "^0.5.0"
pylint = "^3.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]
line_length = 79